sfdx-source/force-app/main/default/objects/Notifier__e/Notifier__e.object-meta.xml
<CustomObject>
    <description>LEM-955: It allows generic Platform Event schema and the trigger listener to act as dispatcher of the events. It passes topic and corresponding payload to the trigger listener which identifies service corresponding to the passed topic and passes payload to the service layer for further processing.</description>
    <label>Notifier</label>
    <pluralLabel>Notifiers</pluralLabel>
</CustomObject>