sfdx-source/force-app/main/default/objects/Notifier__e/fields/Partition_Key__c.field-meta.xml
<CustomField>
    <fullName>Partition_Key__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-23322: It stores the platform event partition key value.</description>
    <label>Partition Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>