sfdx-source/force-app/main/default/objects/Notifier__e/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-24197: It is used to store the default Unique Identifier generated for the event for creating logs while partitioning.</description>
    <label>UUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>